--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@next/font": "^13.4.3",
+    "@react-three/fiber": "^8.13.6",
     "@types/node": "20.1.7",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
+    "@types/three": "^0.154.0",
     "autoprefixer": "10.4.14",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
@@ -25,6 +27,7 @@
     "react-powerglitch": "^1.0.0",
     "react-scroll": "^1.8.9",
     "tailwindcss": "3.3.2",
+    "three": "^0.154.0",
     "typescript": "5.0.4"
   },
   "devDependencies": {
