--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/font": "^13.4.3",
+    "@react-three/drei": "^9.79.4",
     "@react-three/fiber": "^8.13.6",
     "@types/node": "20.1.7",
     "@types/react": "18.2.6",
