--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/font": "^13.4.3",
+    "@react-spring/web": "^9.7.3",
     "@react-three/drei": "^9.79.4",
     "@react-three/fiber": "^8.13.6",
     "@types/node": "20.1.7",
@@ -22,6 +23,7 @@
     "framer-motion": "^10.12.12",
     "next": "13.4.2",
     "postcss": "8.4.23",
+    "r3f-perf": "^7.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
