--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@motionone/utils": "^10.15.1",
     "@next/font": "^13.4.3",
     "@react-three/drei": "^9.79.4",
     "@react-three/fiber": "^8.13.6",
